# ChangeLog for sys-fs/captive
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/captive/ChangeLog,v 1.4 2005/02/13 21:02:25 genstef Exp $

*captive-1.1.5-r2 (13 Feb 2005)

  13 Feb 2005; Stefan Schweizer <genstef@gentoo.org>
  +files/add-extra-opts-for-user-access-to-mount-t-captive.patch,
  +captive-1.1.5-r2.ebuild:
  New ebuild with static tarball to solve =gnome-vfs-2.6* depend and
  gnome-vfs-problems, reported in bug 77239 thanks to Dylan Wakefield
  <dylanw@telpacific.com.au> and solve mount problems to allow other users to
  umount the device as reported in bug 75825 thanks to Thomas Bettler
  <bettlertho@sis.unibe.ch>, Alexander Schneider <A.Schneider@magicspace.de>,
  Marc Gallagher <marcgallagher@gmail.com>, Lars Petersen <lpetersen@gmx.net>
  and Alistair <alistair@stuffthatworks.com.au>

*captive-1.1.5-r1 (05 Dec 2004)

  05 Dec 2004; Stefan Schweizer <genstef@gentoo.org>
  +files/use-lufis-for-mount-t-captive.patch, +captive-1.1.5-r1.ebuild,
  -captive-1.1.5.ebuild:
  Adding a patch to make "mount -t captive-ntfs" working, bumping the revision
  to send it out.

  03 Dec 2004; Stefan Schweizer <genstef@gentoo.org>
  +files/do-not-check-for-lufsd.patch:
  Adding missing patch

*captive-1.1.5 (02 Dec 2004)

  02 Dec 2004; Stefan Schweizer <genstef@gentoo.org> +metadata.xml,
  +captive-1.1.5.ebuild:
  Adding captive thanks to various people from bug 32929
