@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/captive/captive-1.1.5-r2.ebuild,v 1.1 2005/02/13 21:02:25 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/captive/captive-1.1.5-r2.ebuild,v 1.2 2005/02/15 17:57:46 genstef Exp $
 
 inherit eutils
 
@@ -22,7 +22,8 @@ RDEPEND="sys-libs/readline
 	dev-libs/glib
 	>=dev-libs/openssl-0.9.7c
 	>=dev-libs/libxml2-2.4.29
-	sys-fs/lufis"
+	>=sys-fs/lufis-0.3
+	>=sys-fs/fuse-2.2"
 
 DEPEND="${RDEPEND}
 	sys-fs/ntfsprogs"
